<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etVacationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vacation_title" />

        <EditText
            android:id="@+id/etHotel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hotel" />

        <EditText
            android:id="@+id/etStartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/start_date"
            android:focusable="false"
            android:clickable="true" />

        <EditText
            android:id="@+id/etEndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/end_date"
            android:focusable="false"
            android:clickable="true" />

        <Button
            android:id="@+id/btnSaveVacation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <Button
            android:id="@+id/btnDeleteVacation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete" />

        <Button
            android:id="@+id/btnShareVacation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share" />

        <TextView
            android:id="@+id/tvExcursionsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/excursions"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/btnViewAllExcursions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Search Excursions" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/excursionRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnAddExcursion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_excursion" />

    </LinearLayout>
</ScrollView>
